src/objects/agf__ADM_Bookmark__c.object
<CustomObject>
    <description>Used to bookmark favorite pages for quick access.</description>
    <fields>
        <fullName>agf__Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Bookmark</label>
    <nameField>
        <displayFormat>BM-{00000}</displayFormat>
        <label>Bookmarks</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookmarks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>